@@ -1,3 +1,7 @@
+* February 7 2004, Henrik Isaksson *
+
+ * Updated libsyllable for GCC3.
+
 * January 27 2004, Henrik Isaksson *
 
  * Fixed stupid mistake in NodeMonitor; m was being deleted too soon.
@@ -485,6 +489,7 @@ disabled controls.  The following files have been patched:
 
 	The sub-menu arrow is now drawn corretly, and menus which have children
 	are now drawn slightly larger to allow for the arrow.
+
 
 
 
