@@ -1,3 +1,7 @@
+* Feb 7 2004, Henrik Isaksson *
+
+Updated AppServer, AppServer drivers and libsyllable for GCC3.
+
 * Feb 1 2004, Kristian Van Der Vliet *
 
 Update RTL8139 driver to support more compatible cards.  Patch from
@@ -460,6 +464,7 @@ Added the following keymaps:
 * Jun 14 2002, Kristian Van Der Vliet *
 
 Implement get_tld(), set_tld() in process.c
+
 
 
 
